--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
   test-api:
     name: Run API and run a GET request
     runs-on: self-hosted
-    needs: build-and-push
+#     needs: build-and-push
     steps:
       - name: Check out code
         uses: actions/checkout@v2
