--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,33 +7,42 @@ on:
       - main
   
 jobs:
-  build-and-push:
-    name: Build image and push to GitHub Packages registry
+#   build-and-push:
+#     name: Build image and push to GitHub Packages registry
 #     runs-on: ubuntu-latest
-    runs-on: self-hosted
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Check out code
+#         uses: actions/checkout@v2
 
-      - name: Build, tag, and push image to Github Container Registry
-        run: |
-          echo ${{ secrets.GH_TOKEN }} | docker login ghcr.io -u docker --password-stdin
-          docker build -t flask-api .
-          docker tag flask-api ghcr.io/andre177/flask-api
-          docker push ghcr.io/andre177/flask-api
+#       - name: Build, tag, and push image to Github Container Registry
+#         run: |
+#           echo ${{ secrets.GH_TOKEN }} | docker login ghcr.io -u docker --password-stdin
+#           docker build -t flask-api .
+#           docker tag flask-api ghcr.io/andre177/flask-api
+#           docker push ghcr.io/andre177/flask-api
           
-  test-api:
+#   test-api:
+#     name: Run API and run a GET request
+#     runs-on: self-hosted
+#     needs: build-and-push
+#     steps:
+#       - name: Check out code
+#         uses: actions/checkout@v2
+        
+#       - name: Testing API
+#         run: |
+#           pip3 install flask
+#           python3 api.py &
+#           sleep 10
+#           curl -XGET http://localhost:5000/ping
+
+  silly-job:
     name: Run API and run a GET request
     runs-on: self-hosted
-    needs: build-and-push
     steps:
       - name: Check out code
         uses: actions/checkout@v2
         
-      - name: Testing API
+      - name: Saying Hello
         run: |
-          pip3 install flask
-          python3 api.py &
-          sleep 10
-          curl -XGET http://localhost:5000/ping
-
+          echo "Hello?"
